Fix bug AOS on tablet and mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ a.logo {
 }
 
 section {
+  overflow-x: hidden;
   scroll-margin-top: 90px;
 }
 section.violet {
